# Sikapa-Enterprise

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPER_QUICKREF.md  LICENSE  README.md  SECURITY.md  Sikapa.code-workspace  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .env.staging.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  render.staging.yaml  render.yaml  requirements-prod.txt  requirements.txt  ruff.toml  test_auth_system.py  update_skus.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 579b53d42293_add_idempotency_key_to_order.py  5aa7b199e4b3_order_reviews_and_sunscription_tables.py  7015b831481a_add_product_deleted_at_column_for_soft_.py  a4011e455772_test_update.py  a83bbcaf54ed_add_user_email_field.py  a8b9c0d1e2f3_create_create_all_tables.py  b3c2f1a8e9d4_add_authentication_models.py  c1d2e3f4a5b6_add_invoice_pdf_url.py  cf3b83e2c22d_add_ecommerce_models_and_order_tracking.py  d7e8f9a0b1c2_add_product_is_active.py  e9f8d7c6b5a4_add_product_sales_sku_rating.py  ef6089c7a760_add_search_trigram_indexes.py  f8e7d6c5b4a3_add_order_paystack_fields.py  g1h2i3j4k5l6_add_paystack_init_idempotency.py  h3i4j5k6l7m8_wishlist_paystack_tx_demo_seed.py  i4j5k6l7m8n9_add_delete_review_media_rows_fn.py  j5k6l7m8n9o0_fix_review_rls_visibility.py  k6l7m8n9o0p1_merge_review_rls_and_invoice_heads.py  k7l8m9n0o1p2_add_order_subtotal_delivery_shipping.py  l7m8n9o0p1q2_add_order_coupon_fields.py  m1n2o3p4q5r6_merge_google_oauth_and_cart_variant_branches.py  m8n9o0p1q2r3_add_order_tax_fields.py  n3o4p5q6r7s8_add_product_listing_indexes.py  n9o0p1q2r3s4_add_user_deleted_at.py  p5q6r7s8t9u0_orderitem_variant_snapshots_inv_variant.py  q2r3s4t5u6v7_add_user_google_oauth_sub.py  r4s5t6u7v8w9_add_shipping_profile_and_order_payment_flags.py  s1t2u3v4w5x6_add_email_is_placeholder.py  t9u0v1w2x3y4_add_admin_rbac_coupons_inventory_settings.py  u1v2w3x4y5z6_add_returns_variants_review_media_search_log.py  v7w8x9y0z1a2_add_product_images_and_variant_media.py  w8x9y0z1a2b3_cart_order_variant_id.py  z1y2x3w4v5u6_add_username_name_optional_email.py
backend/app/: db.py  main.py  migration_core_schema.py  models.py
backend/app/core/: audit.py  cache.py  celery_app.py  checkout_tax.py  email.py  email_service.py  email_templates.py  errors.py  ghana_shipping.py  http_errors.py  invoice_service.py  logging_config.py  maintenance.py  newsletter_tasks.py  observability.py  order_mail.py  paystack_client.py  pg_rls_auth.py  placeholder_email.py  rate_limit.py  sanitization.py  search_analytics.py  search_index.py  security.py  settings.py  sku_generator.py  (+7 more)
backend/dbschemas/: schema.sql  seed_test_catalog.sql
backend/docs/: AUTHENTICATION.md  README.md
backend/migration/: manage.py  migrations.py
backend/tests/: conftest.py  test_admin_permissions.py  test_alembic_revisions.py  test_auth_e2e.py  test_category_resolve.py  test_checkout_tax.py  test_checkout_tax_unit.py  test_coupons_checkout.py  test_dsa.py  test_email_service.py  test_google_oauth_2fa.py  test_health_ready.py  test_observability.py  test_orders_paystack_flow.py  test_paystack_routes.py  test_paystack_services.py  test_product_delete.py  test_products_pagination.py  test_rate_limiting.py  test_review_create.py  test_review_delete.py  test_settings_errors.py  test_staging_startup.py  test_storefront_media.py  test_supabase_urls.py
backend/tools/: generate_cert.py  seed_demo_catalog.py  start_secure.py  supabase_wipe_data.py
(+538 files in other folders)
