[project]
name = "sikapa-backend"
version = "0.1.0"
description = "FastAPI backend for Sikapa Enterprise"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[project.dependencies]
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.5" }
python-dotenv = "^1.0.0"
httpx = "^0.29.0"
