[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sikapa-backend"
version = "0.1.0"
description = "FastAPI backend for Sikapa Enterprise"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[project.dependencies]
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
python-multipart = "^0.0.9"
"pydantic[email]" = "^2.10.6"
pydantic-settings = "^2.5.2"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
supabase = "^2.10.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.13.3"
sqlmodel = "^0.0.21"
authlib = "^1.3.2"
cryptography = "^43.0.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "==4.0.1"
pyotp = "^2.9.0"
"qrcode[pil]" = "^7.4.2"
httpx = "^0.27.2"
asyncpg = "^0.27.0"
nh3 = "^0.2.18"
"redis[hiredis]" = "^5.0.8"
"celery[redis]" = "^5.4.0"

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--asyncio-mode=auto",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=50"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests"
]
